# youtotok

./: package-lock.json  package.json
src/: App.tsx  store.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: DirectionalButtons.tsx  NavBar.tsx  TextArea.tsx
src/pages/: Download.tsx  DownloadPage.tsx  SubtitlesPage.tsx
src/pages/Editor/: AudioWave.tsx  Editor.css  Editor.tsx  VideoEditor.tsx  index.ts  types.ts
src/pages/Subtitles/: VttTextArea.tsx  index.tsx
